--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -220,7 +220,10 @@ main {
   text-shadow: 0 0 12px #000;
 }
 .section#section-about .container .left .studies, .section#section-about .container .right .studies {
-  height: 100%;
+  flex: 1;
+}
+.section#section-about .container .left .experience, .section#section-about .container .right .experience {
+  flex: 1;
 }
 .section .container {
   width: clamp(440px, 80vw, 650px);
@@ -275,16 +278,7 @@ main {
     display: none;
   }
 }
-@media screen and (max-height: 510px) {
-  .section.active#section-about .container .left, .section.active#section-about .container .right {
-    flex-direction: row;
-  }
-  .section.active#section-about .container .left > div, .section.active#section-about .container .right > div {
-    flex: 1;
-    height: 80%;
-  }
-}
-@media screen and (max-width: 685px) {
+@media screen and (max-width: 685px) and (max-height: 1200px) {
   .section.active#section-about .container {
     flex-direction: row;
     display: flex;
@@ -348,5 +342,35 @@ main {
   .section .container-arrow:hover::before {
     box-shadow: 4.91px 4.91px 15px #bebebe, -4.91px -4.91px 15px #ffffff;
     opacity: 0.9;
+  }
+}
+@media screen and (max-height: 510px) {
+  .section.active#section-about .container .left, .section.active#section-about .container .right {
+    flex-direction: row;
+  }
+  .section.active#section-about .container .left > div, .section.active#section-about .container .right > div {
+    flex: 1;
+    height: 80%;
+  }
+}
+@media screen and (min-height: 1200px) {
+  .section.active#section-about .container {
+    flex-direction: column;
+    padding: 30px 0;
+  }
+  .section.active#section-about .container .left, .section.active#section-about .container .right {
+    width: 80%;
+  }
+  .section.active#section-about .container .right {
+    flex-direction: row;
+  }
+  .section.active#section-about .container .right > div {
+    flex: 1;
+    height: 90%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .section.active#section-about .container .right {
+    flex-direction: column;
   }
 }/*# sourceMappingURL=styles.css.map */
