--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -278,10 +278,12 @@ main{
                 }
             }
             .studies{
-                // width: clamp(200px, 80%, 250px);
-                height: 100%;
-                // justify-self: flex-end;
-                // background: #00f;
+                // height: 100%;
+                flex: 1;
+            }
+            .experience{
+                // height: 100%;
+                flex: 1;
             }
         }
 
@@ -379,21 +381,7 @@ main{
     }
 }
 
-@media screen and (max-height: 510px){
-    .section{
-        &.active#section-about .container{
-            .left, .right{
-                flex-direction: row;
-                > div{
-                    flex: 1;
-                    height: 80%;
-                }
-            }
-        }
-    }
-}
-
-@media screen and (max-width: 685px){
+@media screen and (max-width: 685px) and (max-height: 1200px){
     .section{
         &.active{
             &#section-about .container{
@@ -484,3 +472,58 @@ main{
     }
 }
 
+
+
+@media screen and (max-height: 510px){
+    .section{
+        &.active#section-about .container{
+            .left, .right{
+                flex-direction: row;
+                > div{
+                    flex: 1;
+                    height: 80%;
+                }
+            }
+        }
+    }
+}
+
+
+@media screen and (min-height: 1200px){
+    .section{
+        &.active{
+            &#section-about .container{
+                flex-direction: column;
+                padding: 30px 0;
+                
+                .left, .right{
+                    width: 80%;
+                    // height: 75vh;
+                    // position: fixed;
+                    // top: 100px;
+                    // bottom: 100px;
+                }
+
+                .right{
+                    flex-direction: row;
+                    > div{
+                        flex: 1;
+                        height: 90%;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    .section{
+        &.active{
+            &#section-about .container{
+                .right{
+                    flex-direction: column;
+                }
+            }
+        }
+    }
+}
